Bug 406801  Import and display of event with foreign timezone fails; r=philipp